# Hax

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_and_tag.yml
hax/: __init__.py
hax/checkpointer/: __init__.py  nn_checkpointer.py
hax/cli/: __init__.py  cli.py
hax/generators/: __init__.py  generator_metadata.py  generator_numpy.py
hax/layers/: __init__.py  attention.py  hypernetworks.py  initializers.py  nnx_wrappers.py  pose.py  residual.py  siren.py
hax/metrics/: __init__.py  writer.py
hax/networks/: __init__.py  flexconsensus.py  hetsiren.py  image_gray_scale_adjustment.py  latent_space_deconvolution.py  reconsiren.py  volume_gray_scale_adjustment.py  zernike3deep.py
hax/programs/: __init__.py  decode_states_from_latents.py  estimate_latent_covariances.py  filter_latents.py  gaussian_volume_fitting.py  modart.py  zart.py
hax/schedulers/: __init__.py
hax/utils/: __init__.py  convolutional_filters.py  ctf.py  euler.py  fourier_filters.py  grid_interpolation.py  hyperparameter_tuning.py  image_transformations.py  jax_tsp.py  loggers.py  losses.py  miscellaneous.py  normalizers.py  optimal_transport_functions.py  random_gen.py  reconstruction.py  segmentation.py  symmetry_groups.py  whiten_filter.py  zernike3d.py
hax/viewers/: __init__.py
hax/viewers/annotate_space/: annotate_space.py
hax/viewers/annotate_space/chimerax_connection/: viewer_morph_chimerax.py  viewer_salesman_solver.py
hax/viewers/annotate_space/layers/: layers.py
hax/viewers/annotate_space/qt_widgets/: menus.py  tables.py
hax/viewers/annotate_space/threads/: clustering_threads.py  dimred_threads.py  pyqt_socket_threads.py
hax/viewers/annotate_space/utils/: utils.py
hax/viewers/annotate_space/viewer_socket/: server.py
hax/viewers/annotate_space/wrappers/: wrappers.py
hax/viewers/server_loading_functions/: load_model.py
