# Keeping Hatch in the loop in case it is useful in the future

[build-system]
#requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
#build-backend = "hatchling.build"
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hax"
dynamic = ["version", "dependencies"]
description = "Hax dependencies"
requires-python = ">=3.11,<3.12"
# tfp-nightly[jax]<0.27.0
# ott-jax<=0.5.1
# jaxkd<=0.1.2
dependencies = ["einops<=0.8.1", "tqdm<=4.67.1", "matplotlib<=3.10.3", "numpy<=1.26.4", "scikit-learn<=1.7.1",
                "xmipp_metadata>=1.2.2", "grain<=0.2.15", "pandas<=2.1.4", "flax<=0.10.7", "orbax<=0.1.9",
                "orbax-checkpoint<=0.11.25", "cloudpickle<=3.1.1", "dm_pix<=0.4.4", "tensorboard<=2.19.0", "pynndescent<=0.5.13",
                "napari[all] >=0.6.0, < 0.7.0", "napari-molecule-reader", "python_tsp<=0.2.0", "cuml-cu12==25.6.*", "umap-learn<0.6.0",
                "mmap_ninja<=0.8.0", "lz4<=4.4.5", "tensorboardX<=2.6.4", "pacmap<=0.8.0", "tbb<=2022.3.0", "sympy<1.14.0"]

[project.scripts]
project_manager = "hax.cli:main"

[project.optional-dependencies]
torch_datasets = ["torch<=2.0.1"]
tensorflow_datasets = ["tensorflow<=2.19.0", "tensorflow-datasets<=4.9.9"]
cuda12 = ["jax[cuda12]<=0.6.0"]
cuda13 = ["jax[cuda13]<=0.6.0"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.package-data]
"hax" = ["viewers/server_loading_functions/*", "viewers/annotate_space/media/*"]

[tool.setuptools.dynamic]
version = {attr = "hax.__version__"}
dependencies = {file = ["requirements.txt"]}

#[tool.hatch.version]
#path = "hax/__init__.py"
#
#[tool.hatch.metadata.hooks.requirements_txt]
#files = ["requirements.txt"]
#
## https://mypy.readthedocs.io/en/stable/config_file.html
#[tool.mypy]
#files = "src/**/"
#strict = true
#disallow_any_generics = false
#disallow_subclassing_any = false
#show_error_codes = true
#pretty = true

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu", "https://download.pytorch.org/whl/cpu"]
